--- a/src/components/Protfollio/Protfollio.scss
+++ b/src/components/Protfollio/Protfollio.scss
@@ -64,3 +64,11 @@ $height: 100vh;
   color: silver;
   margin-left: 2px;
 }
+
+.projects {
+  margin-top: 10%;
+  height: 100vh;
+  max-width: 75rem;
+  display: block;
+  margin-left: 1em;
+}
